@@ -6224,7 +6224,7 @@ NsEnsembleImplementationCmdNR(
 				 * target command prefix. */
 	Tcl_Obj *copyPtr;	/* The actual list of words to dispatch to.
 				 * Will be freed by the dispatch engine. */
-	int prefixObjc, copyObjc, result;
+	int prefixObjc, copyObjc;
 	Interp *iPtr = (Interp *) interp;
 
 	/*
@@ -6285,9 +6285,7 @@ NsEnsembleImplementationCmdNR(
 	 * Hand off to the target command.
 	 */
 	
-	result = Tcl_NREvalObj(interp, copyPtr, TCL_EVAL_INVOKE);
-	TclNRClearCommandFlag(interp);
-	return result;
+	return Tcl_NREvalObj(interp, copyPtr, TCL_EVAL_INVOKE);
     }
 
   unknownOrAmbiguousSubcommand:
